--- a/CheckerApplication-master/CheckerSystem/CheckerSystem.csproj
+++ b/CheckerApplication-master/CheckerSystem/CheckerSystem.csproj
@@ -49,6 +49,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>gordonIcon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -150,6 +153,9 @@
   <ItemGroup>
     <Content Include="Assets\blip.wav" />
     <Content Include="Assets\failure_beep.wav" />
+    <Resource Include="gordonIcon.ico" />
+    <Resource Include="gordon_icon_14g_icon.ico" />
+    <Resource Include="gordon_seal_guZ_icon.ico" />
     <Resource Include="Assets\gordon-seal-300.png" />
     <Resource Include="Assets\gordon-seal.png" />
     <Content Include="Assets\happy_beep.wav" />
