Tweaked Scan page to resize text box, tweaked events page scrolling, tweaked sign in color identification, tweaked results page text size

--- a/CheckerApplication-master/CheckerSystem/CheckerSystem.csproj
+++ b/CheckerApplication-master/CheckerSystem/CheckerSystem.csproj
@@ -58,7 +58,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -148,6 +150,7 @@
   <ItemGroup>
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
